--- a/yatra-cabs/src/Component/NotFairGrid/style.css
+++ b/yatra-cabs/src/Component/NotFairGrid/style.css
@@ -1,4 +1,50 @@
 .wrapper-on-notfaigrid{
     height: 255px;
     padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center ;
 }
+/* InfoSection.css */
+.info-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 1rem;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+  }
+  
+  .info-card {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #00a550;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+  }
+  
+  .icon {
+    font-size: 40px;
+    color: #00a550;
+    margin-bottom: 10px;
+  }
+  
+  .title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #00a550;
+    margin-bottom: 10px;
+  }
+  
+  .description {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #555;
+  }
+  
+  .info-card + .info-card {
+    border-left: 1px solid #ccc;
+  }
+  
