--- a/yatra-cabs/src/Component/Landing/Ad/style.css
+++ b/yatra-cabs/src/Component/Landing/Ad/style.css
@@ -1,9 +1,41 @@
-.wrapper-on-ad{
+.ad-container{
     width: 96%;
     margin: 2%;
     height: 160px;
     position: absolute;
     bottom: -130px;
     background-color: #D9D9D9;
-    ;
+    border-radius: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+} 
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.store-img{
+    height: 80px;
+    width: 205px;
+}  
+.hr-div{
+    height: 80%;
+    border: solid 1px #747373;
+}
+.headline-first{
+    font-size: 42px;
+    font-weight: 600;
+    margin: 8px;
+    line-height: 1;
+}
+.short-para{
+    font-size: 26px;
+    font-weight: 300;
+}
+.haedline-second{
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1px;
 }
