--- a/yatra-cabs/src/Component/LocalTaxiServices/style.css
+++ b/yatra-cabs/src/Component/LocalTaxiServices/style.css
@@ -1,3 +1,27 @@
 .wrapper-on-localtaxiservices{
     height: 166px;
 }
+/* HeroSection.css */
+.hero-section {
+    text-align: center;
+    padding: 30px;
+    background-color: #fff;
+    color: #333;
+  }
+  
+  .hero-title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #444;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
+  
+  .hero-description {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #555;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
