--- a/yatra-cabs/src/App.css
+++ b/yatra-cabs/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 .wrapper-0n-app-component{
     display: flex;
