--- a/yatra-cabs/src/Component/FareTable/style.css
+++ b/yatra-cabs/src/Component/FareTable/style.css
@@ -1,7 +1,6 @@
 .fare-table {
-    padding: 20px;
+    padding: 5px;
     text-align: center;
-    background-color: #f9f9f9;
     height: 256px;
   }
   
@@ -12,26 +11,26 @@
   }
   
   thead th {
-    background-color: #4CAF50;
+    background-color: #4A7437;
     color: white;
-    font-size: 16px;
-    padding: 10px;
+    font-size: 32px;
+    padding: 15px;
     text-transform: uppercase;
   }
   
   tbody td {
-    background-color: #dff5d5;
-    color: #333;
-    padding: 10px;
-    text-align: center;
-    font-size: 14px;
+    background-color: #D5F2C8;
+    color: #585858;
+    padding: 15px;
+    text-align: start;
+    font-size: 20px;
   }
   
   thead th, tbody td {
-    border: 1px solid #ddd;
+    border-right: 1px solid white;
   }
   
   tbody tr:nth-child(even) td {
-    background-color: #e7f8e7;
+    background-color: #D5F2C8;
   }
   
