implemented the why cab comp css for desktop

--- a/yatra-cabs/src/Component/OneWayJourney/style.css
+++ b/yatra-cabs/src/Component/OneWayJourney/style.css
@@ -6,24 +6,32 @@
     height: 400px;
   }
   
-  .content {
+  .one-way-journey .content {
     max-width: 50%;
   }
   
-  .content h2 {
+  .one-way-journey .content h2 {
     font-size: 24px;
     color: #333;
     margin-bottom: 20px;
     font-weight: bold;
   }
-  .content .title{
+  .one-way-journey .content .title{
+    font-size: 36px;
+    font-weight: 800;
     color: #585858;
   }
-  .content .title .highlight {
+  .one-way-journey .content .title .highlight {
     color: #29a329;
   }
+
+  .one-way-journey .content  .description{
+    color: #585858;
+    font-size: 20px;
+    font-weight: 400;
+  }
   
-  .content p {
+  .one-way-journey .content p {
     font-size: 16px;
     line-height: 1.5;
     color: #555;
