--- a/yatra-cabs/src/Component/WhyYatri/style.css
+++ b/yatra-cabs/src/Component/WhyYatri/style.css
@@ -23,7 +23,7 @@
     gap: 20px;
   }
   
-  .image-container {
+  .why-yatri .content-container .image-container {
     flex: 1;
     text-align: center;
   }
