--- a/yatra-cabs/src/Component/CarRental/style.css
+++ b/yatra-cabs/src/Component/CarRental/style.css
@@ -1,51 +1,49 @@
 .wrapper-0n-carrental{
     height: 969px;
 }
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
+  
+  .wrapper-0n-carrental .container {
+    margin: 10px 10px;
+    /* background-color: #ffffff; */
+    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px; */
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
   }
   
-  .container {
-    width: 80%;
-    margin: 20px auto;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-  }
-  
-  .header {
-    background-color: #4caf50;
+  .wrapper-0n-carrental .container .header {
+    background-color: #216900;
     color: #ffffff;
     padding: 20px;
     text-align: center;
-    border-radius: 8px 8px 0 0;
+    border-radius: 10px;
   }
   
-  .header h1 {
+  .wrapper-0n-carrental .container .header h1 {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 48px;
   }
   
   .wrapper-0n-carrental .container .content {
     padding: 20px;
+    background-color: #F1F2F5;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
   }
   
-  .content ul {
-    list-style-type: none;
-    padding: 0;
+  .wrapper-0n-carrental .container .content ul {
+    padding: 0 20px 0 20px;
   }
   
-  .content li {
+  .wrapper-0n-carrental .container .content li {
     margin-bottom: 15px;
-    font-size: 1rem;
+    font-size: 22px;
     line-height: 1.6;
-    color: #333333;
+    color: #585858;
   }
   
-  .content strong {
-    color: #000000;
+  .wrapper-0n-carrental .container .content strong {
+    color: #585858;
   }
   
