--- a/yatra-cabs/src/Component/RoadTrip/style.css
+++ b/yatra-cabs/src/Component/RoadTrip/style.css
@@ -1,51 +1,45 @@
 .wrapper-0n-roadtrip{
-    height: 942px;
+  height: 969px;
 }
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-  }
-  
-  .container {
-    width: 80%;
-    margin: 20px auto;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-  }
-  
-  .header {
-    background-color: #4caf50;
-    color: #ffffff;
-    padding: 20px;
-    text-align: center;
-    border-radius: 8px 8px 0 0;
-  }
-  
-  .header h1 {
-    margin: 0;
-    font-size: 1.5rem;
-  }
-  
-  .wrapper-0n-roadtrip .container .content {
-    padding: 20px;
-  }
-  
-  .content ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .content li {
-    margin-bottom: 15px;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #333333;
-  }
-  
-  .content strong {
-    color: #000000;
-  }
-  
+
+.wrapper-0n-roadtrip .container {
+  margin: 10px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.wrapper-0n-roadtrip .container .header {
+  background-color: #216900;
+  color: #ffffff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.wrapper-0n-roadtrip .container .header h1 {
+  margin: 0;
+  font-size: 48px;
+}
+
+.wrapper-0n-roadtrip .container .content {
+  padding: 20px;
+  background-color: #F1F2F5;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+.wrapper-0n-roadtrip .container .content ul {
+  padding: 0 20px 0 20px;
+}
+
+.wrapper-0n-roadtrip .container .content li {
+  margin-bottom: 15px;
+  font-size: 22px;
+  line-height: 1.6;
+  color: #585858;
+}
+
+.wrapper-0n-roadtrip .container .content strong {
+  color: #585858;
+}
