--- a/yatra-cabs/src/Component/Landing/NavBar/style.css
+++ b/yatra-cabs/src/Component/Landing/NavBar/style.css
@@ -3,14 +3,34 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 10px 0 10px;
 }
-
+.nav-bar .contact{
+    background-color: #216900;
+    padding: 0 10px 0 10px;
+    border-radius: 100px 100px 100px 1px;
+    color: white;
+    font-size: 28px;
+}
 .logo{
     width: 200px;
     height: 65px;
 }
-.nav-bar-right-side-item{
+.right-menu-items{
+    height: 100%;
+    width: 20%;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
-
+.item-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.item-container .icon{
+    width: 35px;
+    height: 35px;
+    color: #A0A0A0;
+}
