--- a/yatra-cabs/src/Component/NotFairGrid/style.css
+++ b/yatra-cabs/src/Component/NotFairGrid/style.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center ;
+    margin-top: 5%;
 }
 .info-section {
     display: flex;
@@ -17,7 +18,6 @@
     flex: 1;
     text-align: center;
     padding: 20px;
-    background-color: #f9f9f9;
   }
   
   .card-icon {
