--- a/yatra-cabs/src/Component/Landing/ExploreCab/Outstation/style.css
+++ b/yatra-cabs/src/Component/Landing/ExploreCab/Outstation/style.css
@@ -3,29 +3,28 @@
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    height: 95%;
+    height: 100%;
     padding-top: 4%;
+    padding-bottom: 4%;
 }
 .outstation .btn-container .btn{
-    height: 40px;
-    width: 145px;
+    padding: .2vw 1.7vw;
     border-radius: 8px;
     border-color: #216900;
     font-weight: 600px;
-    font-size: 20px;
+    font-size: 1.5vw;
     color: #A0A0A0;
     background-color: white;
     border-width: 1.6px;
 }
 .outstation .btn-container .activeb-btn{
-    height: 40px;
-    width: 145px;
+    padding: .2vw 1.7vw;
     border-radius: 8px;
     border-color: #216900;
     background-color: #216900;
     color: white;
     font-weight: 600px;
-    font-size: 20px;
+    font-size: 1.5vw;
 }
 .btn-container{
     width: 55%;
