--- a/yatra-cabs/src/Component/Landing/ExploreCab/style.css
+++ b/yatra-cabs/src/Component/Landing/ExploreCab/style.css
@@ -1,14 +1,13 @@
 .export-cab{
-    width: 693px;
-    height: 360px;
+    width: 52%;
+    height: 75%;
     position: absolute;
-    right: 5%;
+    right: 2%;
     top: 7%;
     background-color: #F7F7F7;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
 }
 .export-cab .btn-cantainer{
@@ -18,29 +17,43 @@
     margin-top: 2%;
 }
 .export-cab .btn-cantainer .btn{
-    height: 49px;
-    width: 172px;
+    padding: 0.7% 4%;
     border-radius: 8px;
     border-color: #216900;
     font-weight: 500px;
-    font-size: 26px;
+    font-size: 1.7vw;
     color: #A0A0A0;
     background-color: white;
     border-width: 1.6px;
 }
 .export-cab .btn-cantainer .activeb-btn{
-    height: 49px;
-    width: 172px;
+    padding: 0.3% 4%;
     border-radius: 8px;
     border-color: #216900;
     background-color: #216900;
     color: white;
     font-weight: 500px;
-    font-size: 26px;
+    font-size: 1.7vw;
 }
 .component-container{
     width: 90%; 
-    height: 80%;
+    height: 100%;
 }
 
+/* tablet view */
+@media (max-width: 768px) {
+    .export-cab{
+        height: 55%;
+        position: absolute;
+        right: 2%;
+        top: 20%;
+    }
+}
+
+@media (max-width: 750px) {
+    .export-cab{
+        width: 95%;
+        height: 65%;
+    }
+}
 
