--- a/yatra-cabs/src/Component/Landing/style.css
+++ b/yatra-cabs/src/Component/Landing/style.css
@@ -4,7 +4,8 @@
 .bg-image-on-landing{
     background-image: url(../../assets/landingpagebg.jpeg);
     width: 100%;
-    height: 571px;
+    min-height: 571px;
+    height: 30vw;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
@@ -42,4 +43,31 @@ p{
 }
 .tag-line-bold-1{
     padding-left: 10px;
+}
+
+/* tablet view */
+@media (max-width: 768px) {
+    .tag-line-wrapper{
+        position: absolute;
+        top: 28%;
+    }
+}
+
+@media (max-width: 750px) {
+    .dark-image-background{
+        background-image: linear-gradient(180deg, rgba(0, 0, 0, .836), transparent);
+    }
+    .tag-line-wrapper{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 1%;
+        text-align: center;
+        
+    }
+    .tag-lines{
+        width: 100%;
+        height: 45%;
+    }
 }
