--- a/yatra-cabs/src/Component/Landing/Ad/style.css
+++ b/yatra-cabs/src/Component/Landing/Ad/style.css
@@ -1,15 +1,24 @@
 .ad-container{
     width: 96%;
     margin: 2%;
-    height: 160px;
+    height: fit-content;
     position: absolute;
-    bottom: -130px;
+    bottom: -7.2vw;
     background-color: #D9D9D9;
-    border-radius: 50px;
+    border-radius: 2vw;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-direction: column;
 } 
+.ad-container-destop{
+    width: 95%;
+    height: fit-content;
+    background-color: #D9D9D9;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 .wrapper{
     display: flex;
     flex-direction: column;
@@ -17,25 +26,43 @@
     align-items: center;
 }
 .store-img{
-    height: 80px;
-    width: 205px;
+    height: 4vw;
+    width: 50%;
 }  
 .hr-div{
-    height: 80%;
+    height: 7vw;
     border: solid 1px #747373;
 }
 .headline-first{
-    font-size: 42px;
+    font-size: clamp(18px,3vw,41px);
     font-weight: 600;
     margin: 8px;
     line-height: 1;
 }
 .short-para{
-    font-size: 26px;
+    font-size: clamp(12px,1.5vw,26px);
     font-weight: 300;
 }
 .haedline-second{
-    font-size: 26px;
+    font-size: clamp(18px,2.5vw,26px);
     font-weight: 700;
-    line-height: 1px;
+    line-height: 5vw;
+}
+.mobile-view{
+    display: none;
+}
+
+
+@media (max-width: 750px) {
+    .desktop-view{
+        display: none;
+    }
+    .mobile-view{
+        display: block;
+    }
+    .ad-container{
+        padding: 2%;
+        position: absolute;
+        bottom: -15vw;
+    }
 }
