--- a/yatra-cabs/src/App.css
+++ b/yatra-cabs/src/App.css
@@ -1,5 +1,5 @@
 .app{
-  width: 100vw;
+  /* width: 100vw; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
 .wrapper-0n-app-component{
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 10vw;
     justify-content: center;
     flex-shrink: 0;
     width: 100%;
