--- a/yatra-cabs/src/Component/LocalTaxiServices/style.css
+++ b/yatra-cabs/src/Component/LocalTaxiServices/style.css
@@ -1,5 +1,5 @@
 .wrapper-on-localtaxiservices{
-    height: 166px;
+    height: fit-content;
 }
 .hero-section {
     text-align: center;
@@ -8,7 +8,7 @@
   }
   
   .hero-title {
-    font-size: 36px;
+    font-size: 3vw;
     font-weight: 800;
     color: #585858;
     margin-bottom: 10px;
@@ -17,7 +17,7 @@
   }
   
   .hero-description {
-    font-size: 20px;
+    font-size: 2vw;
     line-height: 1.6;
     color: #555;
     margin: 0 auto;
