--- a/yatra-cabs/src/Component/FareTable/style.css
+++ b/yatra-cabs/src/Component/FareTable/style.css
@@ -1,7 +1,7 @@
 .fare-table {
     padding: 5px;
     text-align: center;
-    height: 256px;
+    height: fit-content;
   }
   
   table {
@@ -13,7 +13,7 @@
   thead th {
     background-color: #4A7437;
     color: white;
-    font-size: 32px;
+    font-size: 3vw;
     padding: 15px;
     text-transform: uppercase;
   }
@@ -23,7 +23,7 @@
     color: #585858;
     padding: 15px;
     text-align: start;
-    font-size: 20px;
+    font-size: 2vw;
   }
   
   thead th, tbody td {
