--- a/yatra-cabs/src/Component/WhyYatri/style.css
+++ b/yatra-cabs/src/Component/WhyYatri/style.css
@@ -34,7 +34,7 @@
     border-radius: 10px;
   }
   
-  .features-container {
+  .content-container .features-container {
     flex: 2;
     display: flex;
     flex-direction: column;
