--- a/yatra-cabs/src/Component/CarRental/style.css
+++ b/yatra-cabs/src/Component/CarRental/style.css
@@ -1,8 +1,5 @@
   .wrapper-0n-carrental .container {
     margin: 10px 10px;
-    /* background-color: #ffffff; */
-    /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px; */
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -18,7 +15,7 @@
   
   .wrapper-0n-carrental .container .header h1 {
     margin: 0;
-    font-size: 48px;
+    font-size: clamp(12px, 3vw, 48px);
   }
   
   .wrapper-0n-carrental .container .content {
@@ -34,7 +31,7 @@
   
   .wrapper-0n-carrental .container .content li {
     margin-bottom: 15px;
-    font-size: 22px;
+    font-size: clamp(7px,1.5vw,22px);
     line-height: 1.6;
     color: #585858;
   }
