--- a/yatra-cabs/src/Component/RoadTrip/style.css
+++ b/yatra-cabs/src/Component/RoadTrip/style.css
@@ -15,7 +15,7 @@
 
 .wrapper-0n-roadtrip .container .header h1 {
   margin: 0;
-  font-size: 48px;
+  font-size: clamp(12px, 3vw, 48px);
 }
 
 .wrapper-0n-roadtrip .container .content {
@@ -31,7 +31,7 @@
 
 .wrapper-0n-roadtrip .container .content li {
   margin-bottom: 15px;
-  font-size: 22px;
+  font-size: clamp(7px,1.5vw,22px);
   line-height: 1.6;
   color: #585858;
 }
