--- a/yatra-cabs/src/Component/Footer/style.css
+++ b/yatra-cabs/src/Component/Footer/style.css
@@ -113,22 +113,18 @@
     .footer-menu li {
       font-size: 1rem;
     }
-  
-    .newsletter-input {
-      flex-direction: column;
-      padding: 10px;
-      border-radius: 15px;
+  }
+
+  @media (max-width: 750px) {
+    .footer-logo{
+      width: 200px;
+      height: 65px;
     }
-  
-    .newsletter-input input {
-      width: 100%;
-      margin-bottom: 10px;
-      border-radius: 10px;
-    }
-  
-    .newsletter-input button {
-      width: 100%;
-      border-radius: 10px;
+    .footer-menu{
+      width: 98%;
+      display: flex;
+      flex-direction: row;
+      gap: 2%;
     }
   }
   
