fixes for mobile view

--- a/yatra-cabs/src/Component/Landing/Ad/style.css
+++ b/yatra-cabs/src/Component/Landing/Ad/style.css
@@ -66,3 +66,11 @@
         bottom: -15vw;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .ad-container{
+        padding: 2%;
+        position: absolute;
+        bottom: -22vw;
+    }
+}
