--- a/yatra-cabs/src/Component/Footer/style.css
+++ b/yatra-cabs/src/Component/Footer/style.css
@@ -149,5 +149,16 @@
     .footer-bottom {
       font-size: 0.7rem;
     }
+
+    .footer-logo{
+      width: 200px;
+      height: 65px;
+    }
+    .footer-menu{
+      width: 98%;
+      display: flex;
+      flex-direction: row;
+      gap: 2%;
+    }
   }
   
